// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertBanner component renders correctly 1`] = `
<div>
  <div
    class="Alert Alert--success ColorPair ColorPair--white"
  >
    <div
      class="actions"
    />
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h5
          class="MuiTypography-root title Typography MuiTypography-h5"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2z"
            />
          </svg>
          Success
        </h5>
        This is a success alert banner
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBanner component renders correctly with a sticky position 1`] = `
<div>
  <div
    class="Alert Alert--sticky ColorPair ColorPair--alert"
    style="top: 100px;"
  >
    <div
      class="actions"
    />
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h5
          class="MuiTypography-root title Typography MuiTypography-h5"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Warning
        </h5>
        This is a warning alert banner
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBanner component renders correctly with a warning severity 1`] = `
<div>
  <div
    class="Alert ColorPair ColorPair--alert"
  >
    <div
      class="actions"
    />
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h5
          class="MuiTypography-root title Typography MuiTypography-h5"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Warning
        </h5>
        This is a warning alert banner
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBanner component renders correctly with an action 1`] = `
<div>
  <div
    class="Alert ColorPair ColorPair--alert"
  >
    <div
      class="actions"
    >
      <span>
        Some action here
      </span>
    </div>
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h5
          class="MuiTypography-root title Typography MuiTypography-h5"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Warning
        </h5>
        This is a warning alert banner
      </div>
    </div>
  </div>
</div>
`;
